<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#00FF7F"
    tools:context=".Ajuda" >

    <TextView
        android:id="@+id/tvInstrucoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAjuda"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/tv_instrucoes"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvAjuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInstrucoes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/tv_ajuda1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAjuda2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAjuda"
        android:layout_below="@+id/tvAjuda"
        android:layout_marginTop="20dp"
        android:text="@string/tv_ajuda2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAjuda3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAjuda2"
        android:layout_below="@+id/tvAjuda2"
        android:layout_marginTop="18dp"
        android:text="@string/tv_ajuda3"
        android:textSize="20sp" />

</RelativeLayout>
