<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Categoria" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/imgbtnSelecao"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bt_cat_selecao"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/selecoes"
            android:background="@drawable/shapeimgbutton" />

        <TextView
            android:id="@+id/txtSelecao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bt_cat_selecao" />
    </LinearLayout>

<LinearLayout 
    	android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
    <ImageButton
        android:id="@+id/imgbtnJogador"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bt_cat_jogadores"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/jogadores" 
        android:background="@drawable/shapeimgbutton"/>

    <TextView
        android:id="@+id/txtJogadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_cat_jogadores" />

</LinearLayout>

<LinearLayout 
    	android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
    <ImageButton
        android:id="@+id/imgbtnCidadeSede"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bt_cat_cidade_sede"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cidadesede"
        android:background="@drawable/shapeimgbutton" />
    
    <TextView
        android:id="@+id/txtCidadeSed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_cat_cidade_sede" />
</LinearLayout>
    
</LinearLayout>
